# itog

./: .gitignore
indexer/: CMakeLists.txt  bd.cpp  bd.h  bd.ini  indexer.cpp  indexer.h  indexer.ini  main.cpp
